--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ function previewImage(input) {
 
 }
 </script>
+
 <html>
 <head>
 	<meta charset="utf-8">
@@ -29,24 +30,54 @@ function previewImage(input) {
 </head>
 
 <body>
-  <p>Upload your image, and tint it!!</p>
-  <input type="file" id="input-file" accept="image/*" onchange="previewImage(this)">
-  <img id="preview">
-  <div id="tinted-images"></div>
-  <div id="output-box">
-	<img id="output-img">
-  </div>
-  <script src="script.js"></script>
+	<div class="container">
+		<div class="column">
+			<p>Upload your image, and tint it!!</p>
+			<input type="file" id="input-file" accept="image/*" onchange="previewImage(this)">
+			<img id="preview">
+		</div>
+		<div class="column">
+			<div id="tinted-images"></div>
+		</div>
+		<div class="column">
+			<div id="output-box">
+				<img id="output-img">
+				<h2 id="color-label">Hello</h2>
+			</div>
+		</div>
+	</div>
+	<script src="script.js"></script>
 </body>
 </html>
 
 <style>
 * {
   margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Helvetica;
 }
+
 html {
-  background-color: #b3aaaa;
+  background-color: #777777;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 input[type="file"] {
@@ -55,19 +86,23 @@ input[type="file"] {
 }
 
 #preview {
-  width: 100px;
-  height: 100px;
+  width: 6vw;
+  height: 6vw;
 }
 
 #tinted-images img {
-  width: 100px;
-  height: 100px;
+  width: 6vw;
+  height: 6vw;
   margin-right: 10px;
 }
 
 #output-img {
-  width: 200px;
-  height: 200px;
+  width: 15vw;
+  height: 15vw;
+}
+
+#color-label {
+	text-align: center;
 }
 
 </style>
