--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function previewImage(input) {
 	<div class="container">
 		<div class="column">
 			<label for="input-file">
-				<img id="preview" style="cursor: pointer;">
+				<img id="preview" class="upload-icon" style="cursor: pointer;">
 			</label>
 			<input type="file" id="input-file" accept="image/*" onchange="previewImage(this)" style="display: none;">
 		</div>
@@ -79,6 +79,29 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #555555;
+  /* border-radius: 10px;
+  border-color: #333333; */
+  border: 3px solid #333333;
+  border-radius: 10px;
+  
+  padding: 10px;
+  margin: 10px;
+}
+
+.upload-icon {
+  background-image: url('uploadIcon.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+
+
+#output-box {
+	/* background-color: #555555; */
+	border-radius: 10px;
+	padding: 10px;
+	margin: 10px;
 }
 
 input[type="file"] {
@@ -87,15 +110,20 @@ input[type="file"] {
 }
 
 #preview {
-  width: 6vw;
-  height: 6vw;
+	width: 6vw;
+	height: 6vw;
 }
 
 #tinted-images img {
-  width: 6vw;
-  height: 6vw;
-  margin-right: 10px;
+	width: 6vw;
+	height: 6vw;
+	margin-right: 10px;
+	background-color: #555555;
+	/* border-radius: 10px; */
+	/* padding: 10px;
+	margin: 10px; */
 }
+
 
 #output-img {
   width: 15vw;
@@ -105,5 +133,10 @@ input[type="file"] {
 #color-label {
 	text-align: center;
 }
+
+img {
+  border: none;
+}
+
 
 </style>
