--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@ function previewImage(input) {
 <body>
 	<div class="container">
 		<div class="column">
-			<label for="input-file">
-				<img id="preview" class="upload-icon" style="cursor: pointer;">
-			</label>
-			<input type="file" id="input-file" accept="image/*" onchange="previewImage(this)" style="display: none;">
+			<div class="input-container">
+				<label for="input-file" class="upload-area">
+					<img id="preview" class="upload-icon" style="cursor: pointer;">
+				</label>
+				<input type="file" id="input-file" accept="image/*" onchange="previewImage(this)" style="display: none;">
+			</div>
 		</div>
-		<div class="column">
+		<div class="column" id="column-fill">
 			<div id="tinted-images"></div>
 		</div>
-		<div class="column">
+		<div class="column" id="column-fill">
 			<div id="output-box">
 				<img id="output-img">
 				<h2 id="color-label">Color</h2>
@@ -80,6 +82,13 @@ body {
   padding: 10px;
 }
 
+.column.middle {
+  display: flex;
+  justify-content: center;
+}
+
+
+
 .column {
 	height: 100%;
 	width: 33.33%;
@@ -91,14 +100,16 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #555555;
-	/* border-radius: 10px;
-	border-color: #333333; */
-	border: 3px solid #333333;
-	border-radius: 10px;
+	
 	
 	padding: 10px;
 	margin: 10px;
+}
+
+#column-fill {
+	background-color: #555555;
+	border: 3px solid #333333;
+	border-radius: 10px;
 }
 
 @media (orientation: portrait) {
@@ -137,6 +148,15 @@ body {
   background-position: bottom left;
 }
 
+.input-container {
+	background-color: #555555;
+	border: 3px solid #333333;
+	border-radius: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 5px;
+	padding-bottom: 2px;
+}
 
 #output-box {
 	/* background-color: #555555; */
@@ -156,15 +176,11 @@ input[type="file"] {
 }
 
 #tinted-images img {
-	width: 8vw;
-	height: 8vw;
-	margin-right: 10px;
+	width: 6vw;
+	height: 6vw;
+	/* margin-right: 5px; */
 	background-color: #555555;
-	/* border-radius: 10px; */
-	/* padding: 10px;
-	margin: 10px; */
 }
-
 
 #output-img {
   width: 15vw;
