Styled image URL input area

--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
     padding-top: 0px;
   }
 
+  #input-link {
+    background-color: #777777;
+    color:black;
+    border: 2px solid #333333;
+    align-self: center;
+  }
+  #input-link::placeholder {
+    color:black
+  }
+
+  .input-container button {
+    background-color: #777777;
+    border: 2px solid #333333;
+    border-radius: 4px;
+    padding: 5px;
+    margin:5px;
+  }
+
   .column {
     height: 100%;
     box-sizing: border-box;
@@ -189,6 +207,7 @@
 
     .input-container {
       margin-right: 2px;
+      margin-bottom: 20px;
     }
 
     #preview {
